dataset1235/2025-2/1153765216/users/3158098637/executions/2052804200_254684124.log
== SUBMISSION (2025-09-03 12:46:50)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else: print ("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:44:30)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:46:28)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:46:45)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else: print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 12:54:15)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:46:33)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 12:43:58)
-- CODE: 
i = int(input())
if i >= 18:
  print ("maior de idade")
else:
  print ("menor de idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior de idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:44:42)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:43:45)
-- CODE: 
i = int(input())
if i >= 18:
  print ("maior de idade")
else:
  print ("menor de idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior de idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:46:36)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 12:54:14)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 12:44:34)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:43:52)
-- CODE: 
i = int(input())
if i >= 18:
  print ("maior de idade")
else:
  print ("menor de idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior de idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:43:10)
-- CODE: 
i = int(input())
if i >= 18:
  print "maior de idade"
else:
  print "menor de idade"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    print "maior de idade"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    print "maior de idade"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    print "maior de idade"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    print "maior de idade"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    print "maior de idade"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    print "maior de idade"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 12:46:16)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
elif:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 12:46:19)
-- CODE: 
i = int(input())
if i >= 18:
  print ("Maior_de_idade")
elif:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
